--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <link rel="stylesheet" type="text/css" href="./style/style.css" title="style" />
-  <script defer src='https://portalstage.catchpoint.com/jp/105817/v4.0.11/InitialLoadScript.js'></script>
+  <script defer src='https://portalstage.catchpoint.com/jp/105817/latest/InitialLoadScript.js'></script>
 
 <!-- The following code changes the beacon from unload/beforeunload to pageHide -->
 <script language="javascript" type="text/javascript">
